--- a/layout.css
+++ b/layout.css
@@ -1,5 +1,18 @@
 @charset "utf-8";
 
+/*
+	Web Design
+	Prd 1 / Tobey
+	
+	La Porte High School -{ Home Page
+	Author:	Jacob Day
+	Date:	04/15/2019
+	
+	File Name:	index.html
+*/
+
+/* comment */
+
 html {
    height: 100%;
 }
