--- a/layout.css
+++ b/layout.css
@@ -4,11 +4,11 @@
 	Web Design
 	Prd 1 / Tobey
 	
-	La Porte High School -{ Home Page
+	La Porte High School -{ Layout
 	Author:	Jacob Day
 	Date:	04/15/2019
 	
-	File Name:	index.html
+	File Name:	layout.css
 */
 
 /* comment */
