--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,28 @@
 	
 	File Name:	styles.css
 */
+/*
+html
+- (1..20).each do |i|
+    %div
 
+body,html {height:100%;overflow:hidden;}
+body {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  background: linear-gradient(to bottom, #6e529d 0%,#d97b93 100%);
+}
+div {
+  border: 1px solid rgba(255,255,255,.1);
+  width: 10em;
+  height: 10em;
+  transform: rotate(45deg);
+  margin: 2em;
+  float: left;
+  background: linear-gradient(135deg, rgba(255,255,255,0.05) 0%,rgba(0,0,0,0.05) 100%); 
+}
+*/
 
 /* Basic Styling */
 
@@ -53,10 +74,11 @@ a {
 	float: left;
 	color: white;
 	text-align: center;
-	font-size: 18px;
+  vertical-align: middle;
+	font-size: 1em;
 	line-height: 25px;
 	border-radius: 4px;
-	transition: color 0.5s ease-out;
+	transition: color 0.2s ease-in-out;
 }
 
 .header-right a:after {
@@ -94,6 +116,12 @@ a {
 height: 100%;
 }
 
+.header-left #school a {
+  color: white;
+  font-family: "Dancing Script", sans-serif;
+  font-size: 1.5em;
+}
+
 
 /* Top Navigation Styling */
 
@@ -129,9 +157,10 @@ height: 100%;
 	display: inline-block;
 	color: #1F1F1F;
 	text-align: center;
-	font-size: 2em;
+	font-size: 1.5em;
+  font-weight: 600;
 	padding: 14px 16px;
-	transition: color 0.5s ease-out;
+	transition: color 0.2s ease-in-out;
 }
 
 .dropbtn:hover, .dropdown:hover {
@@ -151,17 +180,17 @@ li.dropdown {
 }
 
 .drop-content a {
-	color: black;
+	color: gray;
 	padding: 12px 16px;
 	display: block;
 	text-align: left;
-	font-size: 1.2em;
-	transition: 0.5s ease-out;
+	font-size: 1em;
+	transition: 0.2s ease-in-out;
 }
 
 .drop-content a:hover {
-	background-color: #1F1F1F;
-	color: gray;
+	background-color: gray;
+	color: #1f1f1f;
 }
 
 .dropdown:hover .drop-content {
@@ -192,8 +221,8 @@ li.dropdown {
 }
 
 .text {
-  color: #f2f2f2;
-  font-size: 1em;
+  color: #1f1f1f;
+  font-size: 1.5em;
   padding: 8px 12px;
   position: absolute;
   bottom: 8px;
@@ -402,7 +431,7 @@ li.dropdown {
   color: black;
   background-color: white;
   padding: 10px;
-  transition: all 0.5s ease;
+  transition: all 0.2s ease;
 }
 
 .card-link #text:before {
@@ -515,7 +544,9 @@ background: rgba(31,31,31,0.9);
 
 .footer #school a {
   color: white;
-  transition: color 0.5s ease-out;
+  transition: color 0.2s ease-in-out;
+  font-family: "Dancing Script", sans-serif;
+  font-size: 2.5em;
 }
 
 .footer #school a:hover {
@@ -528,7 +559,7 @@ background: rgba(31,31,31,0.9);
 
 .footer #slogan a {
   color: white;
-  transition: all 0.5s ease-out;
+  transition: all 0.2s ease-in-out;
   opacity: 1;
 }
 
@@ -559,7 +590,7 @@ hr {
   color: white;
   font-size: 2em;
   padding: 0 10px;
-  transition: color 0.5s ease-out;
+  transition: color 0.2s ease-in-out;
 }
 
 .connect #socials a:hover {
@@ -573,7 +604,7 @@ hr {
 .footer #navigation a {
   font-size: 0.9em;
   color: white;
-  transition: color 0.5s ease-out;
+  transition: color 0.2s ease-in-out;
 }
 
 .footer #navigation a:after {
