--- a/styles.css
+++ b/styles.css
@@ -359,14 +359,16 @@ li.dropdown {
 }
 
 .news-column {
-  float: left;
-  width: 25%;
+  width: 30%;
   padding: 0 10px;
   overflow: hidden;
+  display: inline-block;
+  min-height: 500px;
 }
 
 .news-row {
   margin: (0, -5px);
+  text-align: center;
 }
 
 .news-row:after {
@@ -380,7 +382,7 @@ li.dropdown {
   padding: 16px;
   text-align: left;
   background-color: #f1f1f1;
-  min-height: 425px;
+  min-height: 515px;
 }
 
 
@@ -388,12 +390,13 @@ li.dropdown {
 
 .card-img {
   width: 100%;
-  height: 20%;
+  height: 225px;
+  overflow: hidden;
 }
 
 .card-img > img {
-  width: 100%;
-  height: auto;
+  height: 100%;
+  width: auto;
 }
 
 .card-topic {
@@ -415,6 +418,7 @@ li.dropdown {
   font-size: 0.8em;
   font-weight: 400;
   color: #3d3d3d;
+  line-height: 1.6;
 }
 
 .card-link {
