--- a/administration.css
+++ b/administration.css
@@ -30,21 +30,56 @@
 .admin-column {
 	padding: 0 20px;
 	overflow: hidden;
-	display: flex;
 	justify-content: space-between;
 	align-items: center;
 	white-space: nowrap;
+	height: 100%;
 }
 
 #principal {
 	position: relative;
 	display: inline-block;
-	flex: 1;
 	padding: 20px;
 }
 
-#principal img {
+#thumbnail {
 	border-radius: 50%;
-	height: 100%;
-	width: 100%;
+	height: 160px;
+	width: 160px;
 }
+
+.profile-card {
+	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+	max-width: 300px;
+	margin: auto;
+	text-align: center;
+	position: absolute;
+}
+
+
+.profile-card #name {
+  font-size: 2em;
+  font-weight: bold;
+  padding: 5px;
+}
+
+.profile-card #title {
+  color: grey;
+  font-size: 1.5em;
+}
+
+button {
+  border: none;
+  outline: 0;
+  display: inline-block;
+  padding: 8px;
+  color: white;
+  background-color: #000;
+  text-align: center;
+  cursor: pointer;
+  width: 100%;
+  font-size: 18px;
+}
+
+button:hover, a:hover {
+  opacity: 0.7;
