--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -101,7 +101,7 @@ body {
    height: 100%;
    z-index: 9999;
    background-color: #1f1f1f;
-   display: flex;
+   display: none;
    justify-content: center;
    align-items: center;
 }
