--- a/assets/css/administration.css
+++ b/assets/css/administration.css
@@ -116,10 +116,15 @@
   margin: 0;
 }
 
+.profile-card #education {
+  font-size: 0.9em;
+  margin-top: 3px;
+}
+
 .profile-card #social a {
   color: grey;
   padding: 0 4px;
-  transition: all 0.2s ease-in-out;
+  transition: color 0.2s ease-in-out;
 }
 
 .profile-card button {
@@ -134,9 +139,12 @@
   width: 100%;
   font-size: 1em;
   margin: 0;
-  transition: all 0.2s ease-in-out;
+  transition: color 0.2s ease-in-out;
+  position: absolute;
+  left: 0;
+  bottom: 0;
 }
 
 .profile-card button:hover, .profile-card #social a:hover {
-  opacity: 0.7;
+  color: #FF6600;
 }
