--- a/assets/css/stylesFINAL.css
+++ b/assets/css/stylesFINAL.css
@@ -266,9 +266,10 @@
 
 
 /* Basic Styling */
-
 html {
 	background-color: #1f1f1f;
+	height: 100%;
+	margin: 0;
 }
 
 body {
@@ -276,7 +277,7 @@ body {
 	font-size: 17px;
 	color: #3d3d3d;
 	margin: 0;
-
+	height: 100%;
 }
 
 
@@ -415,7 +416,6 @@ a {
 
 
 /* Top Navigation Styling */
-
 .topnav {
   height: 70px;
   width: 100%;
@@ -492,8 +492,7 @@ li.dropdown:last-child div {
 }
 
 
-/* Recent Updates Slideshow Styling */
-
+/* Recent Updates Slideshow */
 .slideshow-container {
   width: 100%;
   height: 540px;
@@ -623,8 +622,7 @@ li.dropdown:last-child div {
 }
 
 
-/* Navigation Bar Styling */
-
+/* Icon Navigation Bar */
 .navbar-container {
   background: url(../img/parallax.jpg) no-repeat center;
   background-size: cover;
@@ -924,7 +922,22 @@ overflow: hidden;
 background: rgba(31,31,31,0.9);
   border-top: 5px solid;
   border-top-color: #FF6600;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
 
+}
+
+.footer-top {
+	
+}
+
+.footer-center {
+	
+}
+
+.footer-bottom {
+	
 }
 
 .footer #school {
