--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -1,1 +1,444 @@
+@charset "utf-8";
 
+/*
+	Web Design
+	Prd 1 / Tobey
+	
+	La Porte High School -{ Home Page Styling
+	Author:	Jacob Day
+	Date:	04/15/2019
+	
+	File Name:	index.css
+*/
+
+
+/* Recent Updates Slideshow */
+.slideshow-container {
+  width: 100%;
+  height: 66vh;
+  position: relative;
+  margin: auto;
+  background-color: white;
+}
+
+.recent-slides {
+  display: none;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+}
+
+.recent-slides img {
+  width: 100%;
+}
+
+.text {
+  color: #1f1f1f;
+  font-size: 1.5em;
+  padding: 8px 12px;
+  position: absolute;
+  bottom: 8px;
+  width: 100%;
+  text-align: center;
+  z-index: 1;
+  background-color: white;
+  display: none;
+}
+
+.overlay-container {
+  width: 100%;
+  height: 50px;
+  bottom: 50px;
+  position: relative;
+}
+
+.overlay-container:before {
+  content: "";
+  height: 80px;
+  width: 100%;
+  position: absolute;
+  bottom: 0;
+  opacity: 0.4;
+  background: linear-gradient(0deg, rgba(255,102,0,0.8) 0%, rgba(255,102,0,0) 100%);
+}
+
+.overlay-container #overlay {
+  overflow: hidden;
+  width: 100%;
+  height: 100%;
+  background: url('../img/stripes.svg');
+  opacity: 0.2;
+}
+
+.hashtag-container {
+  position: relative;
+  margin-left: 60px;
+  margin-right: auto;
+  z-index: 1;
+}
+
+#hashtag {
+  position: absolute;
+  top: 0;
+  left: 0;
+  overflow: hidden;
+}
+
+#hash1 {
+  display: block;
+  background-color: white;
+  transform: skew(-15deg,0);
+  padding: 2px 20px 6px 20px;
+  margin: 0 10px 0 -10px;
+}
+
+#hash2 {
+  transform: skew(15deg,0);
+  color: #1f1f1f;
+  font-style:;
+  font-size: 1.3em;
+  font-weight: 900;
+}
+
+.dot-container {
+  text-align: center;
+  margin: 0;
+  height: 10px;
+  position: absolute;
+  bottom: 6px;
+  right: 3px;
+}
+
+.dot {
+  height: 4px;
+  width: 55px;
+  margin: 0 2px;
+  background-color: #1f1f1f;
+  display: inline-block;
+  transition: all 0.6s ease-in-out;
+  transform: skew(15deg, 0);
+}
+
+.active {
+  background-color: #FF6600;
+  height: 5.5px;
+}
+
+.fade {
+  -webkit-animation-name: fade;
+  -webkit-animation-duration: 1.5s;
+  animation-name: fade;
+  animation-duration: 1.5s;
+}
+
+@-webkit-keyframes fade {
+  from {opacity: .4} 
+  to {opacity: 1}
+}
+
+@keyframes fade {
+  from {opacity: .4} 
+  to {opacity: 1}
+}
+
+
+/* Icon Navigation Bar */
+.navbar-container {
+  background: url(../img/parallax.jpg) no-repeat center;
+  background-size: cover;
+  background-attachment: fixed;
+  position: relative;
+  height: 15vh;
+}
+
+.navbar {
+  white-space: nowrap;
+  height: 100%;
+  width: 100%;
+  position: relative;
+  background-color: rgba(208,208,208,0.96);
+  display: flex;
+  justify-content: center;
+}
+
+.navbar ul {
+	margin: 0;
+	padding: 0 10px;
+	overflow: hidden;
+	background-color: white;
+	list-style-type: none;
+	position: absolute;
+	bottom: 0;
+	height: 122%;
+	width: 85%;
+	margin-left: auto;
+	margin-right: auto;
+	display: flex;
+	justify-content: space-evenly;
+	align-items: center;
+	box-shadow: 0 0 3px 1px rgba(34,25,25,0.6);
+}
+
+.navbar li {
+  width: 100%;
+  height: 60%;
+  white-space: nowrap;
+  border-right: 1px solid #EBEBEB;
+}
+
+.navbar li:last-of-type {
+  border-right: none;
+}
+
+.navbar a {
+	text-align: center;
+	width: 100%;
+	height: 100%;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+}
+
+.bartext {
+  color: #1f1f1f;
+  font-size: 1em;
+  font-weight: 600;
+  padding-top: 7px;
+  letter-spacing: 0.03em;
+}
+
+.baricon {
+  color: #d0d0d0;
+  font-size: 2em;
+  transition: all 0.2s ease-in-out;
+}
+
+.navbar a:hover .baricon {
+  color: #1f1f1f;
+  transform: scale(1.15);
+}
+
+
+/* News & Events Card Styling */
+.news-container {
+  background: url(../img/parallax.jpg) no-repeat center;
+  background-size: cover;
+  background-attachment: fixed;
+  height: 100vh;
+}
+
+.news {
+  background-color: rgba(33,33,33,0.8);
+  padding: 20px 0;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-content: center;
+}
+
+.news-header-container {
+	height: 10%;
+	display: flex;
+	justify-content: center;
+	align-content: center;
+}
+
+.news #header {
+	height: 100%;
+	width: 100%;
+  color: white;
+  text-align: center;
+  font-size: 1.3em;
+  position: relative;
+  white-space: nowrap;
+}
+
+.news #header:before, .news #header:after {
+  content: "";
+  position: absolute;
+  height: 1px;
+  width: 330px;
+  display: block;
+  background-color: rgba(255,255,255,0.2);
+}
+
+.news #header:before {
+  left: 240px;
+}
+
+.news #header:after {
+  right: 240px;
+}
+
+.news-column {
+  padding: 25px;
+  overflow: hidden;
+  display: inline-block;
+  flex: 1;
+}
+
+.news-row {
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 90%;
+}
+
+.news-row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+.news-card {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  padding: 30px;
+  text-align: left;
+  background-color: #f1f1f1;
+  height: 550px;
+  position: relative;
+}
+
+
+/* Card Styling */
+.card-img {
+  width: calc(100% + 60px);
+  height: 250px;
+  overflow: hidden;
+  text-align: center;
+  margin-left: -30px;
+  margin-top: -30px;
+}
+
+.card-img > img {
+  width: 100%;
+}
+
+.card-topic {
+  font-size: 0.8em;
+  text-transform: uppercase;
+  font-weight: 700;
+  padding-top: 20px;
+  padding-bottom: 5px;
+  color: #FF6600;
+}
+
+.card-title {
+  font-size: 1em;
+  color: #1f1f1f;
+  font-weight: 900;
+}
+
+.card-text {
+  font-size: 0.8em;
+  font-weight: 400;
+  color: #3d3d3d;
+  line-height: 1.6;
+}
+
+.card-link {
+  padding: 40px 20px;
+  display: table;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+}
+
+.card-link #text {
+  font-size: 1em;
+  font-weight: 700;
+  text-align: center;
+  text-transform: uppercase;
+  color: black;
+  background-color: white;
+  padding: 10px;
+  transition: all 0.2s ease;
+}
+
+.card-link #text:before {
+  content: "";
+  top: 0;
+  bottom: 0;
+  position: relative;
+  background-color: #1f1f1f;
+  border-left: 5px solid #FF6600;
+  width: 43px;
+  right: -43px;
+}
+
+.card-link #text:hover {
+  background-color: gray;
+}
+
+
+/* Facts Table Styling */
+.facts {
+  background-color: black;
+  height: 25vh;
+  position: relative;
+}
+
+.facts-row > #header {
+  text-align: center;
+  text-transform: uppercase;
+  font-size: 1.3em;
+  display: table;
+  background-color: #1f1f1f;
+  color: white;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 10px 30px;
+}
+
+.facts-column {
+  float: left;
+  width: 50%;
+  padding: 0 10px;
+}
+
+.facts-row {
+  height: 100%;
+  width: 100%;
+  background-color: white;
+  position: absolute;
+}
+
+.facts-row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+.container-column {
+  float: left;
+  width: 50%;
+  padding: 10px 2px;
+}
+
+
+/* Fact Styling */
+.facts-container > #header {
+  text-align: center;
+  color: #1f1f1f;
+  padding: 5px;
+}
+
+.container-column > #icon {
+  font-size: 2em;
+  text-align: right;
+  vertical-align: middle;
+  color: #1f1f1f;
+}
+
+.container-column > #text {
+  text-align: left;
+  color: #1f1f1f;
+}
+
+.container-column #text > span {
+  font-size: 2em;
+  font-weight: bolder;
+}
